--- a/packages/storybook-html/src/components/header/header.docs.mdx
+++ b/packages/storybook-html/src/components/header/header.docs.mdx
@@ -37,7 +37,7 @@ using [_UQ Search_](https://www.uq.edu.au/search).
           </a>
         </div>
         <div class="uq-header__nav-primary" data-gtm-category="Header navigation">
-          <nav class="uq-header__nav-primary-container">
+          <nav class="uq-header__nav-primary-container" aria-label="primary navigation">
             <ul class="uq-header__nav-primary-list">
               <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://future-students.uq.edu.au/">Study</a>
                 <div class="uq-header__megamenu">
@@ -46,7 +46,7 @@ using [_UQ Search_](https://www.uq.edu.au/search).
                     <div class="megamenu__row">
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Study options</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Find a course or program</a></li>
                             <li><a href="#">Browse study areas</a></li>
@@ -54,30 +54,30 @@ using [_UQ Search_](https://www.uq.edu.au/search).
                             <li><a href="#">How to apply</a></li>
                             <li><a href="#">Scholarships</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Discover UQ</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Why choose UQ</a></li>
                             <li><a href="#">Enhance your employability</a></li>
                             <li><a href="#">Campuses, maps & transport</a></li>
                           </ul>
-                        </nav>
+                        </div>
                         <div class="megamenu__heading">Student life</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Life at UQ and accommodation</a></li>
                             <li><a href="#">Extra student experiences</a></li>
                             <li><a href="#">Events for prospective students</a></li>
                             <li><a href="#">Starting university</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Information for</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">International students</a></li>
                             <li><a href="#">High school students</a></li>
@@ -89,7 +89,7 @@ using [_UQ Search_](https://www.uq.edu.au/search).
                             <li><a href="#">Parents and guardians</a></li>
                             <li><a href="#">Current students</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -102,7 +102,7 @@ using [_UQ Search_](https://www.uq.edu.au/search).
                     <div class="megamenu__row">
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Partner with us</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Research excellence and impact</a></li>
                             <li><a href="#">Research support, integrity and ethics</a></li>
@@ -110,27 +110,27 @@ using [_UQ Search_](https://www.uq.edu.au/search).
                             <li><a href="#">Faculties, schools, intitutues & centres</a></li>
                             <li><a href="#">Find a researcher</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Research degrees</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">PhDs and research degrees</a></li>
                             <li><a href="#">Find a supervisor</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Information for</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Future research students</a></li>
                             <li><a href="#">New research students</a></li>
                             <li><a href="#">Current research students</a></li>
                             <li><a href="#">Prospective research students</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -143,7 +143,7 @@ using [_UQ Search_](https://www.uq.edu.au/search).
                     <div class="megamenu__row">
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Partner with us</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Partners, initiatives and impact</a></li>
                             <li><a href="#">Research & Corporate Partnerships</a></li>
@@ -151,11 +151,11 @@ using [_UQ Search_](https://www.uq.edu.au/search).
                             <li><a href="#">Teaching and Exchange Collaborations</a></li>
                             <li><a href="#">Sponsorship</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Our communities</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Alumni community</a></li>
                             <li><a href="#">Giving and philanthropy</a></li>
@@ -164,18 +164,18 @@ using [_UQ Search_](https://www.uq.edu.au/search).
                             <li><a href="#">Community engagement & volunteering</a></li>
                             <li><a href="#">Community facilities and services</a></li>
                          </ul>
-                        </nav>
+                        </div>
                       </div>
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Information for</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Donors</a></li>
                             <li><a href="#">Business and industry</a></li>
                             <li><a href="#">Government</a></li>
                             <li><a href="#">Media</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -188,7 +188,7 @@ using [_UQ Search_](https://www.uq.edu.au/search).
                     <div class="megamenu__row">
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Our profile</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Introducing UQ</a></li>
                             <li><a href="#">Vision, values and strategy</a></li>
@@ -197,26 +197,26 @@ using [_UQ Search_](https://www.uq.edu.au/search).
                             <li><a href="#">Policies and procedures</a></li>
                             <li><a href="#">Faculties, schools, institutes and centres</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Campuses and facilities</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Campuses, maps & transport</a></li>
                             <li><a href="#">Colleges and Accommodation</a></li>
                             <li><a href="#">Community Faciliites and Services</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Excellence</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Teaching and Learning</a></li>
                             <li><a href="#">Careers at UQ</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -231,7 +231,7 @@ using [_UQ Search_](https://www.uq.edu.au/search).
           </button>
         </div>
       </div>
-      <nav class="slide-menu global-mobile-nav" id="global-mobile-nav"  data-gtm-category="Header navigation mobile">
+      <nav class="slide-menu global-mobile-nav" id="global-mobile-nav"  data-gtm-category="Header navigation mobile"  aria-label="primary navigation mobile">
         <ul>
           <li class="uq-header__newglobal-nav-item">
             <a class="uq-header__newglobal-nav-link slide-menu__control" href="#">Study</a>
@@ -318,7 +318,7 @@ using [_UQ Search_](https://www.uq.edu.au/search).
             </ul>
           </li>
           <li  class="uq-header__newglobal-nav-item">
-            <a class="uq-header__newglobal-nav-link slide-menu__control" href="#">Partners and community</a>
+            <a class="uq-header__newglobal-nav-link slide-menu__control" href="#">Partners and community</a> 
             <ul>
               <li>
                 <a href="#">Partners and community overview</a>
@@ -403,7 +403,7 @@ using [_UQ Search_](https://www.uq.edu.au/search).
           </li>
           <li  class="uq-header__nav-secondary-item">
             <a class="uq-header__nav-secondary-link" href="#">Contact</a>
-          </li>
+          </li>  
       </nav>
       <div class="uq-header__search" data-gtm-category="Header search">
         <div class="uq-header__search-container">
