--- a/packages/storybook-html/src/components/header/header.docs.mdx
+++ b/packages/storybook-html/src/components/header/header.docs.mdx
@@ -28,7 +28,7 @@ using [*UQ Search*](https://www.uq.edu.au/search).
     <header class="uq-header" data-gtm-category="Header">
       <div class="uq-header__container">
         <div class="uq-header__menu-toggle" data-gtm-category="Primary header">
-          <button type="button" class="nav-primary__toggle nav-primary__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="toggle">Menu</button>
+          <button type="button" class="nav-primary__toggle nav-primary__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="Toggle">Menu</button>
         </div>
         <div class="uq-header__logo" data-gtm-category="Primary header">
           <a class="logo--large" href="https://www.uq.edu.au/" data-gtm-label="UQ Logo">
