New global alert styles

--- a/packages/storybook-html/src/components/alert/alert.docs.mdx
+++ b/packages/storybook-html/src/components/alert/alert.docs.mdx
@@ -187,6 +187,41 @@ Global alerts are darker variants of alerts that are used to convey a globally i
 </div>
 ```
 
+### Info global (no title, no dismiss)
+
+<Canvas withSource="none">
+  <Story id="components-alert--info-global-no-title-or-dismiss" />
+</Canvas>
+
+```html
+  <div class="uq-alert uq-alert--info uq-alert--dark uq-alert--global" role="alert">
+    <div class="uq-alert__container">
+      <div class="uq-alert__message">
+        <h3 class="uq-alert__title visually-hidden">Title goes here</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <a href="#" title="Link" class="uq-button--inline">Link</a></p>
+      </div>
+    </div>
+  </div>
+```
+
+### Warning global (no title, no dismiss)
+
+<Canvas withSource="none">
+  <Story id="components-alert--warning-global-no-title-or-dismiss" />
+</Canvas>
+
+```html
+  <div class="uq-alert uq-alert--warning uq-alert--dark uq-alert--global" role="alert">
+    <div class="uq-alert__container">
+      <div class="uq-alert__message">
+        <h3 class="uq-alert__title visually-hidden">Title goes here</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <a href="#" title="Link" class="uq-button--inline">Link</a></p>
+      </div>
+    </div>
+  </div>
+```
+
+
 ## How and when to use 
 
 ### Page alerts
