Fixed incorrect data-gtm-action

--- a/packages/storybook-html/src/components/footer/footer.docs.mdx
+++ b/packages/storybook-html/src/components/footer/footer.docs.mdx
@@ -16,7 +16,7 @@ The global footer provides a consistent branding and navigational element across
 </Canvas>
 
 ```html
-     <footer class="uq-footer" data-gtm-category="Footer">
+    <footer class="uq-footer" data-gtm-category="Footer">
       <div  class="uq-footer__reconciliation">
         <div class="uq-footer__acknowledgement">
           <img class="uq-footer__acknowledgement-flag" src="https://static.uq.net.au/v14/images/rap/aboriginal.svg"/> <img class="uq-footer__acknowledgement-flag" src="https://static.uq.net.au/v14/images/rap/torres-strait-islanders.svg"/> <span class="uq-footer__acknowledgement-text">UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. &mdash; <a href="https://about.uq.edu.au/reconciliation" class="uq-footer__link">Reconciliation at UQ</a></span>
@@ -114,7 +114,7 @@ The global footer provides a consistent branding and navigational element across
         <nav class="uq-footer__navigation uq-footer--mobile">
           <ul class="uq-accordion uq-footer__navigation-list uq-footer__navigation-level-1">
             <li class="uq-accordion__item uq-footer__navigation-item uq-footer__navigation--is-open">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="Toggle">Media</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Media</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
                   <a href="https://marketing-communication.uq.edu.au/contact" class="uq-footer__navigation-link">Media team contacts</a>
@@ -128,7 +128,7 @@ The global footer provides a consistent branding and navigational element across
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="Toggle">Staff</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Staff</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
                   <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current Staff</a>
@@ -148,7 +148,7 @@ The global footer provides a consistent branding and navigational element across
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="Toggle">Current students</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Current students</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
                   <a href="https://my.uq.edu.au/" class="uq-footer__navigation-link">my.UQ</a>
@@ -168,7 +168,7 @@ The global footer provides a consistent branding and navigational element across
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="Toggle">Library</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Library</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
                   <a href="https://www.library.uq.edu.au/" class="uq-footer__navigation-link">Library</a>
@@ -176,7 +176,7 @@ The global footer provides a consistent branding and navigational element across
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="Toggle">Contact</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Contact</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
                   <a href="https://contacts.uq.edu.au/contacts" class="uq-footer__navigation-link">UQ Contact</a>
